--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -26,7 +26,7 @@ updates:
       interval: "weekly"
       day: "monday"
       time: "06:00"
-    target-branch: "develop"
+    target-branch: "bump-deps"
     versioning-strategy: increase
 
   # Maintain dependencies for Composer
@@ -43,5 +43,5 @@ updates:
       interval: "weekly"
       day: "monday"
       time: "06:00"
-    target-branch: "develop"
+    target-branch: "bump-deps"
     versioning-strategy: increase
