--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -11,9 +11,8 @@ updates:
     open-pull-requests-limit: 50
     rebase-strategy: auto
     schedule:
-      interval: "weekly"
-      day: "monday"
-      time: "06:00"
+      interval: "daily"
+      time: "05:00"
 
   # Maintain dependencies for npm
   - package-ecosystem: "npm"
@@ -23,9 +22,8 @@ updates:
     open-pull-requests-limit: 50
     rebase-strategy: auto
     schedule:
-      interval: "weekly"
-      day: "monday"
-      time: "06:00"
+      interval: "daily"
+      time: "05:00"
     target-branch: "bump-deps"
     versioning-strategy: increase
 
@@ -40,8 +38,7 @@ updates:
     open-pull-requests-limit: 50
     rebase-strategy: auto
     schedule:
-      interval: "weekly"
-      day: "monday"
-      time: "06:00"
+      interval: "daily"
+      time: "05:00"
     target-branch: "bump-deps"
     versioning-strategy: increase
