--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -32,7 +32,7 @@ updates:
     target-branch: "main"
     versioning-strategy: increase
     groups:
-      build:
+      marian:
         exclude-patterns:
         - "bootstrap*"
         - "*popper*"
