--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -32,6 +32,11 @@ updates:
     target-branch: "main"
     versioning-strategy: increase
     groups:
+      assets:
+        patterns:
+        - "bootstrap*"
+        - "*popper*"
+        - "font-awesome"
       build:
         patterns:
         - "*"
