--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -8,22 +8,42 @@ updates:
     directory: "/"
     labels:
     - "dependencies"
-    open-pull-requests-limit: 10
+    open-pull-requests-limit: 50
     rebase-strategy: auto
     schedule:
-      interval: "monthly"
+      interval: "daily"
+      time: "05:00"
+    target-branch: "main"
+    groups:
+      github-actions:
+        patterns:
+        - "*"
 
   # Maintain dependencies for npm
   - package-ecosystem: "npm"
     directory: "/"
     labels:
     - "dependencies"
-    open-pull-requests-limit: 10
+    open-pull-requests-limit: 50
     rebase-strategy: auto
     schedule:
-      interval: "monthly"
-    target-branch: "develop"
+      interval: "daily"
+      time: "05:00"
+    target-branch: "main"
     versioning-strategy: increase
+    groups:
+      npm-assets:
+        patterns:
+        - "bootstrap*"
+        - "*popper*"
+        - "font-awesome"
+      npm-build:
+        patterns:
+        - "*"
+        exclude-patterns:
+        - "bootstrap*"
+        - "*popper*"
+        - "font-awesome"
 
   # Maintain dependencies for Composer
   - package-ecosystem: "composer"
@@ -33,9 +53,14 @@ updates:
     directory: "/"
     labels:
     - "dependencies"
-    open-pull-requests-limit: 10
+    open-pull-requests-limit: 50
     rebase-strategy: auto
     schedule:
-      interval: "monthly"
-    target-branch: "develop"
+      interval: "daily"
+      time: "05:00"
+    target-branch: "main"
     versioning-strategy: increase
+    groups:
+      composer:
+        patterns:
+        - "*"
