--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -11,9 +11,8 @@ updates:
     open-pull-requests-limit: 10
     rebase-strategy: auto
     schedule:
-      interval: "daily"
-      time: "05:00"
-    target-branch: "main"
+      interval: "weekly"
+    target-branch: "bump-deps"
     groups:
       github-actions:
         patterns:
@@ -27,9 +26,8 @@ updates:
     open-pull-requests-limit: 10
     rebase-strategy: auto
     schedule:
-      interval: "daily"
-      time: "05:00"
-    target-branch: "main"
+      interval: "weekly"
+    target-branch: "bump-deps"
     versioning-strategy: increase
     groups:
       npm-assets:
@@ -56,9 +54,8 @@ updates:
     open-pull-requests-limit: 10
     rebase-strategy: auto
     schedule:
-      interval: "daily"
-      time: "05:00"
-    target-branch: "main"
+      interval: "weekly"
+    target-branch: "bump-deps"
     versioning-strategy: increase
     groups:
       composer:
